# bot-template

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
api/: __init__.py  example.py
bot/: __init__.py  errors.py  texts.py
bot/inline/: __init__.py  ping.py
bot/pm/: __init__.py  start.py
db/: database.py  models.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
middlewares/: __init__.py  db_middleware.py  referer_middleware.py  session_middleware.py  setup_middleware.py
migrations/models/: 0_20230115091838_init.py  0_20230918200150_init.py
setup/: __init__.py  local_register.py  local_start.py  server_register.py  server_start.py  shutdown.py  startup.py
tgtypes/: __init__.py  db_user.py
utils/: texts.py  translations.py  wait.py
web/: __init__.py  utils.py
web/webapp/: __init__.py
web/webapp/inline_demo/: __init__.py  index.html  routes.py
web/webapp/reply_demo/: routes.py
web/webapp/reply_demo/static/: index.html  main.js  style.css
