[tool.aerich]
tortoise_orm = "db.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "bot-template"
version = "0.1.0"
description = "An advanced template for a telegram bot built with aiogram"
authors = ["Snimshchikov Ilya <snimshchikov.ilya@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bot_template"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aerich = "^0.7.1"
tortoise-orm = "^0.19.3"
redis = "^4.5.1"
python-dotenv = "^0.21.1"
babel = "^2.11.0"
asyncpg = "^0.27.0"
aiogram = {version = "^3.0.0"}
aiogram-fastapi-server = "^0.1.2"

[tool.poetry.group.dev.dependencies]
reloadium = "^0.9.10"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
